# axum-routes

./: Cargo.toml  README.md
axum-routes/: Cargo.toml  RESOLVE.md  ROUTER.md
axum-routes-macros/: Cargo.toml
axum-routes-macros/src/: lib.rs  method.rs  punctuated_attrs.rs  route.rs  router.rs  router_info.rs  util.rs
axum-routes-macros/src/router/: mod.rs
axum-routes-macros/src/routes/: method.rs  mod.rs  variant.rs
axum-routes/examples/: customize.rs  multiple_attributes.rs  path_handlers.rs  resolve.rs  visibility.rs
axum-routes/src/: lib.rs
