[package]
name = "axum-routes-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
matchit.workspace = true
monch.workspace = true
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
thiserror.workspace = true
