[package]
name = "axum-routes"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
## Internal
axum-routes-macros.workspace = true
## External
axum.workspace = true
thiserror.workspace = true

[dev-dependencies]
## External
axum = { version = "0.8", default-features = false, features = ["json"] }
serde_json = { version = "1.0", default-features = false }

[[example]]
name = "path_handlers"

[[example]]
name = "visibility"

[[example]]
name = "multiple_attributes"

[[example]]
name = "resolve"
